[package]
name = "scrap"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[dependencies]
fantoccini = { version = "^0.17", features = ["native-tls"], default-features = false }
webdriver = { version = "^0.43", default-features = false }
async-std = { version = "^1.7", features = ["tokio1", "attributes", "default"], default-features = false }
serde_json = { version = "^1.0", default-features = false }
maplit = { version = "^1.0", default-features = false }
async-trait = { version = "^0.1", default-features = false }
serde = { version = "^1.0", features = ["derive"], default-features = false }
envy = { version = "^0.4", default-features = false }
pretty_env_logger = { version = "^0.4", default-features = false }
dotenv = { version = "^0.15", default-features = false }