[package]
name = "scrap"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[features]
test_local = []

[dependencies]
fantoccini = { version = "^0.17" }
webdriver = { version = "^0.43" }
async-std = { version = "^1.7", features = ["tokio1", "attributes"] }
serde_json = { version = "^1.0" }
maplit = { version = "^1.0" }
async-trait = { version = "^0.1" }
serde = { version = "^1.0" }
envy = { version = "^0.4" }
pretty_env_logger = { version = "^0.4" }
dotenv = { version = "^0.15" }
redis = { version = "0.20", features = ["aio", "async-std-comp"] }
futures = { version = "^0.3" }
html_parser = { version = "^0.6" }
chrono = { version = "^0.4" }
chrono-tz = { version = "^0.5" }
prost = { version = "^0.7" }
prost-types = { version = "^0.8" }

[build-dependencies]
prost-build = { version = "^0.7" }