[package]
name = "server"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = { version = "^0.1", default-features = false }
async-std = { version = "^1.7", features = ["tokio1", "attributes"], default-features = false}
dotenv = { version = "^0.15", default-features = false }
tonic = { version = "^0.4", features = ["transport", "codegen", "prost"], default-features = false }
prost = { version = "^0.7", default-features = false }
log = { version = "^0.4", default-features = false }
pretty_env_logger = { version = "^0.3", default-features = false }

scrap = { path = "../scrap" }

[build-dependencies]
tonic-build = { version = "^0.4", features = ["transport", "rustfmt", "prost"], default-features = false }